@@ -369,10 +369,11 @@ public class Generator implements IGenerator, Closeable {
 		return files;
 	}
 
-	public List<GeneratorTemplate> getGlobalTemplatesListForModElementType(ModElementType<?> type, boolean performFSTasks,
-			AtomicInteger templateID) {
-		return getGlobalTemplatesListForDefinition(generatorConfiguration.getDefinitionsProvider().getModElementDefinition(type),
-				performFSTasks, templateID);
+	public List<GeneratorTemplate> getGlobalTemplatesListForModElementType(ModElementType<?> type,
+			boolean performFSTasks, AtomicInteger templateID) {
+		return getGlobalTemplatesListForDefinition(
+				generatorConfiguration.getDefinitionsProvider().getModElementDefinition(type), performFSTasks,
+				templateID);
 	}
 
 	public List<GeneratorTemplate> getGlobalTemplatesListForDefinition(@Nullable Map<?, ?> map, boolean performFSTasks,
@@ -387,8 +388,8 @@ public class Generator implements IGenerator, Closeable {
 		return new ArrayList<>();
 	}
 
-	private List<GeneratorTemplate> processTemplateDefinitionsToGeneratorTemplates(@Nonnull List<?> templates, boolean performFSTasks,
-			AtomicInteger templateID) {
+	private List<GeneratorTemplate> processTemplateDefinitionsToGeneratorTemplates(@Nonnull List<?> templates,
+			boolean performFSTasks, AtomicInteger templateID) {
 		Set<GeneratorTemplate> files = new HashSet<>();
 		for (Object template : templates) {
 			String name = GeneratorTokens.replaceTokens(workspace, (String) ((Map<?, ?>) template).get("name"));
@@ -457,7 +458,7 @@ public class Generator implements IGenerator, Closeable {
 		}
 
 		// we add all list templates (if any) for given element to the list
-		getModElementListTemplates(generatableElement).forEach(e -> e.forEachTemplate(files::add, null));
+		getModElementListTemplates(generatableElement).forEach(list -> list.templates().forEach(files::addAll));
 
 		return new ArrayList<>(files);
 	}
@@ -480,47 +481,54 @@ public class Generator implements IGenerator, Closeable {
 		if (templateLists != null) {
 			int templateID = 0;
 			for (Object list : templateLists) {
-				Map<GeneratorTemplate, List<Boolean>> files = new LinkedHashMap<>();
-				String groupName = (String) ((Map<?, ?>) list).get("name");
-				Object listData = TemplateExpressionParser.processFTLExpression(this,
-						(String) ((Map<?, ?>) list).get("listData"), generatableElement);
 				List<?> templates = (List<?>) ((Map<?, ?>) list).get("forEach");
-				// we check type of list data collection and convert it to a list if needed
-				List<?> items;
-				if (listData instanceof Map<?, ?> listMap)
-					items = List.copyOf(listMap.entrySet());
-				else if (listData instanceof Collection<?> collection)
-					items = List.copyOf(collection);
-				else if (listData instanceof Iterable<?> iterable) // fallback for the worst case
-					items = StreamSupport.stream(iterable.spliterator(), false).toList();
-				else
-					items = Collections.emptyList();
 				if (templates != null) {
-					for (Object template : templates) {
-						GeneratorTemplate generatorTemplate = new GeneratorTemplate(new File((String) ((Map<?, ?>) template).get("name")),
-								Integer.toString(templateID) + ((Map<?, ?>) template).get("template"),
-								(Map<?, ?>) template);
+					String groupName = (String) ((Map<?, ?>) list).get("name");
+					Object listData = TemplateExpressionParser.processFTLExpression(this,
+							(String) ((Map<?, ?>) list).get("listData"), generatableElement);
 
-						// we store file generation conditions for current mod element
-						List<Boolean> conditionChecks = new ArrayList<>();
-						for (int i = 0; i < items.size(); i++) {
-							conditionChecks.add(i,
-									!generatorTemplate.shouldBeSkippedBasedOnCondition(this, items.get(i)));
+					// we check type of listData collection and convert it to a list if needed
+					List<?> items;
+					if (listData instanceof Map<?, ?> listMap)
+						items = List.copyOf(listMap.entrySet());
+					else if (listData instanceof Collection<?> collection)
+						items = List.copyOf(collection);
+					else if (listData instanceof Iterable<?> iterable) // fallback for the worst case
+						items = List.copyOf(StreamSupport.stream(iterable.spliterator(), false).toList());
+					else
+						items = List.of();
+
+					GeneratorTemplatesList templatesList = new GeneratorTemplatesList(groupName, items, new ArrayList<>());
+
+					for (int index = 0; index < items.size(); index++) {
+						Set<ListTemplate> filesForCurrentItem = new HashSet<>();
+						for (Object template : templates) {
+							String name = GeneratorTokens.replaceVariableTokens(generatableElement, items.get(index),
+									GeneratorTokens.replaceTokens(workspace,
+											((String) ((Map<?, ?>) template).get("name")).replace("@NAME",
+															generatableElement.getModElement().getName())
+													.replace("@registryname",
+															generatableElement.getModElement().getRegistryName())
+													.replace("@itemindex", Integer.toString(index))));
+
+							ListTemplate listTemplate = new ListTemplate(new File(name),
+									Integer.toString(templateID) + ((Map<?, ?>) template).get("template"),
+									templatesList, index, (Map<?, ?>) template);
+
+							if (listTemplate.shouldBeSkippedBasedOnCondition(this, items.get(index)))
+								continue;
+
+							// only preserve the last template for given file (only the last template matching given file will be generated)
+							filesForCurrentItem.remove(listTemplate);
+							filesForCurrentItem.add(listTemplate);
+
+							templateID++;
 						}
 
-						// only add template if its condition passes for at least one list data item
-						if (!conditionChecks.contains(true))
-							continue;
-
-						// only preserve the last template for given file (only the last template matching given file will be generated)
-						files.remove(generatorTemplate);
-						files.put(generatorTemplate, Collections.unmodifiableList(conditionChecks));
-
-						templateID++;
+						templatesList.templates().add(List.copyOf(filesForCurrentItem));
 					}
 
-					fileLists.add(new GeneratorTemplatesList(groupName, items, generatableElement,
-							Collections.unmodifiableMap(files)));
+					fileLists.add(templatesList);
 				}
 			}
 		}
